--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     },
     "dependencies": {
         "jquery": "^3.5.1",
+        "jquery-mousewheel": "^3.1.13",
+        "malihu-custom-scrollbar-plugin": "^3.1.5",
         "smart-grid": "^2.1.2"
     },
     "husky": {
